--- a/AdBlock/Applet.conf
+++ b/AdBlock/Applet.conf
@@ -1,12 +1,12 @@
 // ==UserScript==
-// @ScriptName        微信小程序去除广告
+// @ScriptName        微信小程序去除广告[墨鱼版]
 // @Download          进入小程序，搜索对应名称即可
 // @Author            ddgksf2013
 // @TgChannel         https://t.me/ddgksf2021
 // @Feedback          https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        2023-07-05
-// @Function          去除广告、直接查看隐藏内容
+// @Function          去除广告、直接查看隐藏内容、净化弹窗
 // @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
 // @Suitable          自行观看"# > "注释内容
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Applet.conf
@@ -20,7 +20,8 @@
 hostname = www.bbkj.work, wx.wxqqurl.cn, wp3.lobdol.cn, awg.enmonster.com, mp.weixin.qq.com, wx.mygolbs.com, jabi.coding.net, api.bspapp.com, 3dd0be8a-54fe-43ff-a0e7-f670c4f20432.bspapp.com, *.tslt.xyz, g.syshhc.top, c.jxjt888.top, www.laoguikeji.cn, qj.bpojie.com, b.tslt.xyz, m.xgjyouhui.com, www.freeheikeji.cn, xcx.xianbaow.com, *.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, jabi.coding.net, jt.jxjt888.top, gjsx.vip, d.syshhc.top, gz.gongzijx.com, tvapp.guilaile.cn, www.benbenfx.xyz, 4thdimension.top, api.bspapp.com, tan.ipnas.ltd
 
 
-
+# > 顺丰速运_去广告@ddgksf2013
+^https?:\/\/ucmp\.sf-express\.com\/proxy\/operation-platform\/info-flow-adver\/query url reject-200
 # > 公众号图文去广告@ddgksf2013
 ^(http|https):\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body advertisement response-body ddgksf2013
 # > 小程序_掌上公交@ddgksf2013
