--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -83,7 +83,7 @@
 //2023-05-27 60、新增去除BiliBili搜索页广告，重写按照功能分组，方便用户自行复制添加部分功能
 //2023-06-28 61、新增去除B站每日青少年弹窗@BiliUniverse
 //2023-08-07 62、新增去除B站视频播放时的交互点赞投票弹幕@BiliUniverse
-//2023-08-17 63、对PROTO脚本进行调整，脚本来源于@BiliUniverse，按照自己的习惯进行微调：去除所有log信息，保留动态最常访问，随原作@BiliUniverse更新重写，去除新的视频动态页下方贴片广告及默认去除交互弹幕
+//2023-08-17 63、对PROTO脚本进行调整，脚本来源于@BiliUniverse，按照自己的习惯进行微调：去除所有log信息，保留动态最常访问，去除新的视频动态页下方贴片广告及默认去除交互弹幕
 
 
 hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, app.bilibili.com, api.live.bilibili.com, *.bilibili.com, *.bilibili.*, grpc.biliapi.net,*biliapi.net
