--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -10,7 +10,7 @@
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2023-08-17
-// @ConfigVersion     V2.0.126
+// @ConfigVersion     V2.0.127
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
@@ -154,9 +154,9 @@ hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.
 ^https?:\/\/(app\.bilibili\.com|grpc\.biliapi\.net)\/bilibili\.community\.service\.dm\.v1\.DM\/(DmView|DmSegMobile) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_proto_beta.js
 # ～ BiliBili_哔哩哔哩_青少年弹窗@BiliUniverse
 ^https:\/\/(grpc\.biliapi\.net|app\.bilibili\.com)\/bilibili\.app\.interface\.v1\.Teenagers\/ModeStatus url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_proto_beta.js
-# ～ BiliBili_哔哩哔哩_UP主推荐广告[适配ipad端]@app2smile@ddgksf2013
+# ～ BiliBili_哔哩哔哩_UP主推荐广告[适配ipad端]@BiliUniverse
 ^https?:\/\/(app\.bilibili\.com|grpc\.biliapi\.net)\/bilibili\.app\.(view|viewunite)\.v1\.View\/(View|TFInfo)$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_proto_beta.js
-# ～ BiliBili_哔哩哔哩_动态综合页及视频页去广告@app2smile@kokoryh@ddgksf2013
+# ～ BiliBili_哔哩哔哩_动态综合页及视频页去广告@BiliUniverse
 ^https?:\/\/(app\.bilibili\.com|grpc\.biliapi\.net)\/bilibili\.app\.dynamic\.v2\.Dynamic\/Dyn(All|Video)$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_proto_beta.js
 
 
