--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,11 +6,11 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-08-11
+// @UpdateTime        2023-09-18
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.88
+// @Version           V2.0.89
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -90,6 +90,7 @@
 # [+]2023-07-03  72、移除部分微博详情页面顶部的“30天内，博主已拉黑恶意评论用户...”等文字Tips
 # [+]2023-07-05  73、移除微博帖子下方的贴片广告[忘了更新日志，补上]
 # [+]2023-08-11  74、移除微博国际版趋势页下的热门影片，恢复方法，打开解析器重写后面添加#out=v_f即可
+# [+]2023-09-18  75、移除微博国际版帖子详情页下方的Ad—banner
 
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
@@ -99,6 +100,8 @@ hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.we
 ; host, sdkapp.uve.weibo.com, direct
 
 
+# > 微博国际版_帖子下方广告banner@ddgksf2013
+^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=open_app url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博国际版_趋势页热门影片@ddgksf2013
 ^https?:\/\/api\.weibo\.cn\/\d\/cardlist\?v_f=.*Weibo_intl url reject-dict
 # > 微博_用户推荐弹窗@ddgksf2013
