--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -10,7 +10,7 @@
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.90
+// @Version           V2.0.91
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -100,7 +100,7 @@ hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.we
 # > 微博_请手动添加以下分流至本地@ddgksf2013
 ; host, sdkapp.uve.weibo.com, direct
 
-# > 微博国际版_AD_Preload@ddgksf2013
+# > 微博_AD_Preload@ddgksf2013
 ^https?:\/\/api\.weibo\.cn\/\d\/ad\/preload url reject-dict
 # > 微博_首页顶部homeExtend@ddgksf2013
 ^https?:\/\/api\.weibo\.cn\/\d\/groups\/allgroups\/v\d url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
