--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -11,6 +11,7 @@
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：232）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
+// @Attention         请使用最新版QuantumultX，因为部分重写不兼容旧版QX，例如 url-and-header
 // @APPList           无法𝐌𝐈𝐓𝐌的应用：银行类[绝大部分]|抖音|蜂巢|滴答清单|Taio|小米运动|有条下载|Fileball|万年历|豆瓣[信息流]|虎牙直播|货拉拉|番茄小说|携程旅行[APP]|凯叔讲故事|七猫小说|醒图|剪映|潮汐|不背单词|高铁管家|咕咚运动|APTV|DayOne
 // @Attention         如果广告仍然存在，请『卸载应用』重新安装，还是不行则表示『规则里没有或已失效』
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
@@ -39,7 +40,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.10.04/v2.0.356 url reject-200
+^https?:\/\/2023.10.04/v2.0.357 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -242,6 +243,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject
 ^https?:\/\/api4\.bybutter\.com\/v\d\/app\/placements\/\d\/advertisements url reject
 # > hanglvzongheng
 ^https?:\/\/(discardrp|startup)\.umetrip\.com\/gateway\/api\/umetrip\/native url reject
+^http:\/\/(114\.115\.217\.129)|(home\.umetrip\.com)\/gateway\/api\/umetrip\/native$ \r\nrpid: 10000(18|19) url-and-header reject
 # > hangzhougongjiao
 ^https?:\/\/m.ibuscloud.com\/v2\/app\/getStartPage url reject
 # > haohaozhu
