--- a/AdBlock/Cainiao.conf
+++ b/AdBlock/Cainiao.conf
@@ -6,11 +6,11 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-04-25
+// @UpdateTime        2023-12-16
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载菜鸟APP，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.7
+// @Version           V1.0.8
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Cainiao.conf
 // ==/UserScript==
 
@@ -20,6 +20,8 @@ hostname=cn-acs.m.cainiao.com, guide-acs.m.taobao.com
 
 # > 菜鸟裹裹_amdc处理[Anti已将Amdc分流删除,故更换屏蔽策略]@ddgksf2013
 ^http:\/\/amdc\.m\.taobao\.com url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amdc.js
+# > 菜鸟裹裹_首页中部的问邻居推广@ddgksf2013
+^https?:\/\/cn-acs\.m\.cainiao\.com\/gw\/mtop\.cainiao\.nbpresentation\.homepage\.merge\.get\.cn url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/cainiao_json.js
 # > 菜鸟裹裹_首页中部的惊喜福利推广@ddgksf2013
 ^https?:\/\/cn-acs\.m\.cainiao\.com\/gw\/mtop\.cainiao\.nbpresentation\.protocol\.homepage\.get\.cn url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/cainiao_json.js
 # > 菜鸟裹裹_搜索框下方今日好物推荐@ddgksf2013
