--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -41,7 +41,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.01.22/v2.0.393 url reject-200
+^https?:\/\/2024.01.22/v2.0.394 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -248,7 +248,7 @@ https://fbchina.flipchina.cn/v2/ad/query/* url reject
 ^https?:\/\/api4\.bybutter\.com\/v\d\/app\/placements\/\d\/advertisements url reject
 # > hanglvzongheng
 ^https?:\/\/(discardrp|startup)\.umetrip\.com\/gateway\/api\/umetrip\/native url reject
-^https?:\/\/(114\.115\.217\.129)|(.*umetrip\.com)\/gateway\/api\/umetrip\/native$ url script-response-header https://github.com/ddgksf2013/Scripts/raw/master/hanglvzongheng.js
+^https?:\/\/(114\.115\.217\.129)|(.*umetrip\.com\.cn)\/gateway\/api\/umetrip\/native$ url script-response-header https://github.com/ddgksf2013/Scripts/raw/master/hanglvzongheng.js
 # > hangzhougongjiao
 ^https?:\/\/m.ibuscloud.com\/v2\/app\/getStartPage url reject
 # > haohaozhu
