--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -9,7 +9,7 @@
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
-// @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：251）
+// @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：252）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
 // @Tips              利用捷径打开URL[填写AppScheme]，即可免开屏广告打开应用，适合无法MITM的APP
 // @APPList           无法𝐌𝐈𝐓𝐌的应用：银行类[绝大部分]|抖音|蜂巢|滴答清单|Taio|小米运动|有条下载|Fileball|万年历|豆瓣[信息流]|虎牙直播|货拉拉|番茄小说|携程旅行[APP]|凯叔讲故事|七猫小说|醒图|剪映|潮汐|不背单词|高铁管家|咕咚运动|APTV|DayOne|懂车帝
@@ -41,7 +41,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.01.23/v2.0.395 url reject-200
+^https?:\/\/2024.01.23/v2.0.396 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -677,6 +677,8 @@ https://new-app-api.ylyk.com/v1/user/myinfo/adviser url reject
 ^https?:\/\/1jietu\.com\/apiv\d\/ad url reject
 # > youminxingkong
 ^https?:\/\/entry\.ubixioe\.com\/mob\/sdk\/v\d\/endpoint url reject
+# > yihaodian
+^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=home_launchConfig url reject-200
 
 
 # ======= Z ======= #
