--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2024-01-15
+// @UpdateTime        2024-01-26
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Attention         使用时请注意关闭QuantumultX的[兼容性增强]开关，否则无法去除微博广告
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.94
+// @Version           V2.0.96
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -95,6 +95,8 @@
 # [+]2023-09-28  76、移除微博首页顶部的homeExtend，例如华为Mate60，并添加一条微博去广告重写
 # [+]2024-01-05  77、移除微博搜索页面‘微博热搜CARD’下方的出框广告
 # [+]2024-01-15  78、头部添加说明：兼容性增强与微博去广告冲突，如果你需要去除微博广告，请关闭QX兼容性增强开关
+# [+]2024-01-25  79、修复微博搜索结果信息中广告失效问题[新版更改了items]
+# [+]2024-01-26  80、新增删除微博搜索页面的gallery广告[新版增加的]
 
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
