--- a/Html/Douban.conf
+++ b/Html/Douban.conf
@@ -1,12 +1,12 @@
 // ==UserScript==
-// @Name              豆瓣电影移动版网页优化
-// @Author            @Neurogram, @ddgksf2013
+// @Name              豆瓣移动版网页去广告+快捷观影[墨鱼版]
+// @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求, 可公众号后台回复APP名称
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        2023-11-23
+// @UpdateTime        2024-01-31
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          豆瓣电影移动版网页增强，快捷跳转茶杯狐搜索，豆瓣移动版网页去广告
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/Html/Douban.conf
@@ -16,7 +16,5 @@
 
 hostname = m.douban.com
 
-# > 茶杯狐 流媒体
-^https://m.douban.com/movie/subject/.+ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/douban.js
-# > Airtable 收藏
-^https://m.douban.com/movie/subject/.+\?seen=\d url script-request-header https://github.com/ddgksf2013/Scripts/raw/master/douban.js
+# > 豆瓣移动版网页去广告+快捷观影@ddgksf2013
+^https?:\/\/m\.douban\.com\/(home_guide|movie|tv|book|group|music) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/douban.js
