--- a/Html/Douban.conf
+++ b/Html/Douban.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @Name              豆瓣移动版网页去广告+快捷观影[墨鱼版]
+// @Name              豆瓣移动网页版去广告+快捷观影[墨鱼版]
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求, 可公众号后台回复APP名称
 // @TgChannel         https://t.me/ddgksf2021
