--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        哔哩哔哩净化[墨鱼版]
+// @ScriptName        哔哩哔哩广告净化[墨鱼版]
 // @Author            @ddgksf2013, @blackmatrix7, @app2smile, @yjqiang, @kokoryh, @Maasea, @BiliUniverse
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @TaiWanBilibili    https://apps.apple.com/tw/app/id1517062289
@@ -9,8 +9,8 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2024-01-14
-// @ConfigVersion     V2.0.129
+// @UpdateTime        2024-02-07
+// @ConfigVersion     V2.0.130
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
@@ -86,6 +86,7 @@
 //2023-08-17 63、对PROTO脚本进行调整，脚本来源于@BiliUniverse，按照自己的习惯进行微调：去除所有log信息，保留动态最常访问，去除新的视频动态页下方贴片广告及默认去除交互弹幕
 //2023-11-24 64、修复新版B站我的页面稍后再看logo缺失问题
 //2024-01-14 65、移除哔哩哔哩看番时，视频左边的“点击追番”CARD
+//2024-02-07 66、添加哔哩哔哩普通视频解锁1080P高码率和4K视频版本备注7.65
 
 hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, app.bilibili.com, api.live.bilibili.com, *.bilibili.com, *.bilibili.*, grpc.biliapi.net,*biliapi.net
 
@@ -119,7 +120,7 @@ hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.
 ^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
 
 
-# ======= BiliJson 高码率仅粉版 ======= #
+# ======= BiliJson 高码率仅粉色旧版[V7.65] ======= #
 # ～ BiliBili_哔哩哔哩_1080P高码率+4K画质[番剧和影视除外]@ddgksf2013
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/myinfo\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
 
