--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -5,11 +5,11 @@
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡 请通过邮件反馈问题『其它方式一概无视』：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2024-02-18
+// @UpdateTime        2024-02-20
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
-// @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：268）
+// @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：269）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
 // @Contributor       @blackmatrix7, @app2smile, @DivineEngine, @kyle, @Nick-workflow, @kkpp, @LE
 // @Tips              利用捷径打开URL[填写AppScheme]，即可免开屏广告打开应用，适合无法MITM的APP
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.02.18/v2.0.421 url reject-200
+^https?:\/\/2024.02.20/v2.0.422 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject
 # > 58
@@ -102,6 +102,9 @@
 ^https?:\/\/pan-api\.bitqiu\.com\/activity\/getPromoteGuide url reject
 # > baidushurufa
 ^https?:\/\/mobads\.baidu\.com\/cpro\/ui\/mads.php url reject
+# > baobaoshuyunyu
+^http:\/\/.*babytree\.com/(plough\.do|go_search\/api\/mobile_search_new\/get_multi_search_default_keywords) url reject-200
+^http:\/\/m\.meitun\.com\/newapi\/router\/topic\/hometptf\/feedRecommend url reject-200
 
 
 # ======= C ======= #
