--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -9,8 +9,8 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2024-02-07
-// @ConfigVersion     V2.0.130
+// @UpdateTime        2024-02-23
+// @ConfigVersion     V2.0.131
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
@@ -87,8 +87,9 @@
 //2023-11-24 64、修复新版B站我的页面稍后再看logo缺失问题
 //2024-01-14 65、移除哔哩哔哩看番时，视频左边的“点击追番”CARD
 //2024-02-07 66、添加哔哩哔哩普通视频解锁1080P高码率和4K视频版本备注7.65
+//2024-02-23 67、屏蔽视频4480端口
 
-hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, app.bilibili.com, api.live.bilibili.com, *.bilibili.com, *.bilibili.*, grpc.biliapi.net,*biliapi.net
+hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, app.bilibili.com, api.live.bilibili.com, *.bilibili.com, *.bili*.*, *.bilibili.*, grpc.biliapi.net,*biliapi.net
 
 
 # ======= BiliJson 播放页处理 ======= #
@@ -102,6 +103,8 @@ hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.
 ^https?:\/\/api\.bili(api|bili)\.(net|com)\/pgc\/season\/app\/related\/recommend\? url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_点击追番Card@ddgksf2013
 ^https?:\/\/api\.bilibili\.com\/pgc\/season\/player\/ogv\/cards url reject-dict
+# ～ BiliBili_哔哩哔哩_屏蔽4480端口@kokoryh
+^http:\/\/.*:4480\/upgcxcode url reject-200
 
 
 # ======= BiliJson 直播间处理 ======= #
